--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,15 @@
       }
     ],
     "paths": {
-      "components/*": ["./src/*"]
+      "@components/*": [
+        "./src/app/components/*"
+      ],
+      "@data/*": [
+        "./src/data/*"
+      ],
+      "@public/*": [
+        "./public/*"
+      ]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
