--- a/src/data/app.json
+++ b/src/data/app.json
@@ -1,6 +1,6 @@
 {
   "settings": {
-    "siteName": "Ashley",
+    "siteName": "Farzad Molae | فرزاد مولایی",
     "formspreeURL": "https://formspree.io/f/your_api_key",
     "mailchimp": {
       "url": "",
@@ -14,87 +14,41 @@
     },
     "menu": [
       {
-        "label": "Homepage",
+        "label": "خانه",
         "link": "/",
-        "children": [
-          {
-            "label": "Landing Page",
-            "link": "/"
-          },
-          {
-            "label": "Personal",
-            "link": "/home-2"
-          },
-          {
-            "label": "Home Slider",
-            "link": "/projects-3"
-          }
-        ]
-      },
-      {
-        "label": "Portfolio",
-        "link": "/projects",
-        "children": [
-          {
-            "label": "Grid Type 1",
-            "link": "/projects"
-          },
-          {
-            "label": "Grid Type 2",
-            "link": "/projects-2"
-          },
-          {
-            "label": "Slider",
-            "link": "/projects-3"
-          }
-        ]
-      },
-      {
-        "label": "Services",
-        "link": "/services",
-        "children": [
-          {
-            "label": "Services List",
-            "link": "/services"
-          },
-          {
-            "label": "Single Service",
-            "link": "/services/service-1"
-          }
-        ]
-      },
-      {
-        "label": "Blog",
-        "link": "/blog",
-        "children": [
-          {
-            "label": "Blog list",
-            "link": "/blog"
-          },
-          {
-            "label": "Publication",
-            "link": "/blog/play-to-your-strength-and-supercharge-your-business-4"
-          }
-        ]
-      },
-      {
-        "label": "Contact",
-        "link": "/contact",
         "children": 0
       },
       {
-        "label": "Other",
-        "link": "/team",
+        "label": "خدمات",
+        "link": "/services",
         "children": [
           {
-            "label": "Team",
-            "link": "/team"
+            "label": "لیست خدمات",
+            "link": "/services"
           },
           {
-            "label": "404",
-            "link": "/404"
+            "label": "تمرینات سفارشی",
+            "link": "/services/service-1"
+          },
+          {
+            "label": "آنالیز بدن",
+            "link": "/services/service-2"
+          },
+          {
+            "label": "برنامه‌ تمرینی",
+            "link": "/services/service-3"
+          },
+          {
+            "label": "برنامه‌ تغذیه",
+            "link": "/services/service-4"
           }
         ]
+      },
+
+      {
+        "label": "تماس با من",
+        "link": "/contact",
+        "children": 0
       }
     ]
   },
@@ -102,50 +56,36 @@
     "logo": {
       "text": "فرزاد مولایی"
     },
-    "copy": "© 2023 Farzad Molae. All Rights Reserved.",
+    "copy": "تمام حقوق مادی و معنوی این سایت متعلق به فرزاد مولایی می‌باشد.",
     "menu": [
       {
-        "label": "Home",
+        "label": "خانه",
         "link": "/"
       },
       {
-        "label": "Portfolio",
-        "link": "/projects"
+        "label": "درباره من",
+        "link": "/about"
       },
       {
-        "label": "Services",
+        "label": "خدمات",
         "link": "/services"
       },
       {
-        "label": "Contact",
+        "label": "تماس با من",
         "link": "/contact"
-      },
-      {
-        "label": "Blog",
-        "link": "/blog"
       }
     ]
   },
   "social": [
     {
-      "link": "https://behance.net",
-      "icon": "fab fa-behance",
-      "title": "Behance"
+      "link": "https://www.instagram.com/reza.shirazii77",
+      "icon": "fab fa-instagram",
+      "title": "ّاینستاگرام"
     },
     {
-      "link": "https://dribbble.com",
-      "icon": "fab fa-dribbble",
-      "title": "Dribbble"
-    },
-    {
-      "link": "https://twitter.com",
-      "icon": "fab fa-twitter",
-      "title": "Twitter"
-    },
-    {
-      "link": "https://github.com",
-      "icon": "fab fa-github",
-      "title": "Github"
+      "link": "https://t.me/farzadmolayii",
+      "icon": "fab fa-telegram",
+      "title": "Telegram"
     }
   ]
 }
