--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "date-fns": "^2.30.0",
     "formik": "^2.4.2",
     "gray-matter": "^4.0.3",
